--- a/clinica/app_pacientes/templates/agregarPaciente.html
+++ b/clinica/app_pacientes/templates/agregarPaciente.html
@@ -1,27 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Agregar</title>
-    <link
-      rel="shortcut icon"
-      href="../../static/images/ojo.ico"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="../../static/styles/bootstrap.min.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
+<title>Agregar Paciente</title>
+
+{% extends "home.html" %}
+{% block body %}
     <!-- Button trigger modal -->
     <button
       type="button"
@@ -69,5 +49,4 @@
         </div>
       </div>
     </div>
-  </body>
-</html>
+{% endblock %}
