--- a/clinica/clinica_APP/templates/home.html
+++ b/clinica/clinica_APP/templates/home.html
@@ -1,12 +1,43 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="../../static/styles/estilo.css" />
+    <link
+      rel="shortcut icon"
+      href="../../static/images/ojo.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="../../static/styles/bootstrap.min.css" />
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <h1>inicio</h1>
+    <header class="rom">
+      <h1 id="titulo" class="text-center">Clinica de Optometria</h1>
+      <img
+        id="logo"
+        src="{% static 'images/optometrista.png'%}"
+        style="width: 55px"
+      />
+    </header>
+
+    {% block body %}
+    <h1>Plantilla</h1>
+    {% endblock%}
+    <footer>
+      <div>Clinica de Optometria</div>
+    </footer>
   </body>
 </html>
