--- a/clinica/app_pacientes/templates/app_pacientes/indexPaciente.html
+++ b/clinica/app_pacientes/templates/app_pacientes/indexPaciente.html
@@ -1,39 +1,10 @@
 <title>Home Paciente</title>
 
-{% extends "home.html" %}
+{% extends "home.html" %} {% block body %}
+<!-- <a href="pacienteagregar">Agregar un nuevo paciente </a>
+<a href="{% url 'app_pacientes:home' %}">home</a> -->
 
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
-    <link
-      rel="shortcut icon"
-      href="../../static/images/ojo.ico"
-      type="image/x-icon"
-    />
-    <link rel="stylesheet" href="../../static/styles/bootstrap.min.css" />
-    <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-      crossorigin="anonymous"
-    ></script>
-
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-    />
-  </head>
-  <body> -->
-
-{% block body %}
-<a href="pacienteagregar">Agregar un nuevo paciente </a>
+<a href="{% url 'app_pacientes:agregar' %}">Agregar un nuevo paciente </a>
 
 <input type="search" name="" id="buscador" />
 <button value="buscar">
