--- a/clinica/clinica_APP/templates/index.html
+++ b/clinica/clinica_APP/templates/index.html
@@ -27,8 +27,8 @@
     </header>
     <div id="inicio" class="row justify-content-center">
       <div class="col-sm-3">
-        <label form="menu1"> Sector : </label>
-        <select name="menu" id="menu1">
+        <label form="menuRol"> Sector : </label>
+        <select name="menuRol" id="menuRol">
           <option>secretaría</option>
           <option>Profesional medico</option>
           <option>Ventas</option>
