--- a/clinica/app_pacientes/templates/app_pacientes/indexPaciente.html
+++ b/clinica/app_pacientes/templates/app_pacientes/indexPaciente.html
@@ -32,29 +32,40 @@
   <thead class="thead-dark">
     <tr>
       <th scope="col">#</th>
-      <th scope="col">First</th>
-      <th scope="col">Last</th>
-      <th scope="col">Handle</th>
+      <th scope="col">Nombre</th>
+      <th scope="col">Apellido</th>
+      <th scope="col">Dni</th>
+      <th scope="col">Telefono</th>
+      <th scope="col">Fecha de Nacimiento</th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>@mdo</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td> </td>
+      <td> </td>
+      
     </tr>
     <tr>
       <th scope="row">2</th>
       <td>Jacob</td>
       <td>Thornton</td>
       <td>@fat</td>
+      <td> </td>
+      <td> </td>
+      
     </tr>
     <tr>
       <th scope="row">3</th>
       <td>Larry</td>
       <td>the Bird</td>
       <td>@twitter</td>
+      <td> </td>
+      <td> </td>
+      
     </tr>
   </tbody>
 </table>
