Ajustes en agregarPaciente.html y indexPaciente.html
Ajusté los nombres de los inputs y ortografía en general

--- a/clinica/app_pacientes/templates/app_pacientes/agregarPaciente.html
+++ b/clinica/app_pacientes/templates/app_pacientes/agregarPaciente.html
@@ -2,28 +2,30 @@
 
 {% extends "home.html" %} {% block body %}
 <!-- Button trigger modal -->
+
 <div class="row justify-content-center">
+
   <form id="formulario" class="" action="{% url 'app_pacientes:index' %}" method="post">
     {% csrf_token %}
-    <div class="container-fluid ">
+    <div class="container-fluid">
       <label for="nombre">Nombre:</label>
-      <input type="text" name="nombre" placeholder="ingrese nombre" minlength="4" maxlength="40" required />
+      <input type="text" name="nombre" placeholder="Ingrese su nombre" minlength="4" maxlength="40" required />
     </div>
-    <div class="container-fluid ">
+    <div class="container-fluid">
       <label for="apellido">Apellido:</label>
-      <input type="text" name="apellido" placeholder="ingrese apellido" minlength="4" maxlength="40" required />
+      <input type="text" name="apellido" placeholder="Ingrese su apellido" minlength="4" maxlength="40" required />
     </div>
-    <div class="container-fluid ">
+    <div class="container-fluid">
       <label for="dni">DNI:</label>
-      <input type="text" name="dni" placeholder="ingrese apellido" minlength="4" maxlength="9" required />
+      <input type="text" name="dni" placeholder="Ingrese su DNI" minlength="4" maxlength="9" required />
     </div>
-    <div class="container-fluid ">
-      <label for="telefono"> Telefono:</label>
-      <input type="text" name="dni" placeholder="ingrese telefono opcional" minlength="4" maxlength="9" />
+    <div class="container-fluid">
+      <label for="telefono"> Teléfono:</label>
+      <input type="text" name="telefono" placeholder="Ingrese teléfono opcional" minlength="4" maxlength="9" />
     </div>
-    <div class="container-fluid ">
-      <label for="fecha_nac">fecha de nacimiento :</label>
-      <input type="date" id="start" name="fecha_nac" min="1900-01-01" required />
+    <div class="container-fluid">
+      <label for="fecha_nac">Fecha de nacimiento:</label>
+      <input type="date" id="fecha" name="fecha_nac" min="1900-01-01" required />
     </div>
     <button type="submit" class="btn btn-primary">
       Guardar
