--- a/clinica/app_pacientes/templates/app_pacientes/indexPaciente.html
+++ b/clinica/app_pacientes/templates/app_pacientes/indexPaciente.html
@@ -34,8 +34,8 @@
       <th scope="col">#</th>
       <th scope="col">Nombre</th>
       <th scope="col">Apellido</th>
-      <th scope="col">Dni</th>
-      <th scope="col">Telefono</th>
+      <th scope="col">DNI</th>
+      <th scope="col">Teléfono</th>
       <th scope="col">Fecha de Nacimiento</th>
     </tr>
   </thead>
@@ -47,7 +47,7 @@
       <td></td>
       <td> </td>
       <td> </td>
-      
+
     </tr>
     <tr>
       <th scope="row">2</th>
@@ -56,7 +56,7 @@
       <td>@fat</td>
       <td> </td>
       <td> </td>
-      
+
     </tr>
     <tr>
       <th scope="row">3</th>
@@ -65,7 +65,7 @@
       <td>@twitter</td>
       <td> </td>
       <td> </td>
-      
+
     </tr>
   </tbody>
 </table>
