agregarPaciente.html ahora es un formulario aplicando Bootstrap

--- a/clinica/clinica_APP/templates/home.html
+++ b/clinica/clinica_APP/templates/home.html
@@ -24,7 +24,7 @@
   </head>
   <body>
     <header class="rom">
-      <h1 id="titulo" class="text-center">Clinica de Optometria</h1>
+      <h1 id="titulo" class="text-center">Clínica de Optometría</h1>
       <img
         id="logo"
         src="{% static 'images/optometrista.png'%}"
@@ -36,7 +36,7 @@
     <h1>Plantilla</h1>
     {% endblock%}
     <footer>
-      <div>Clinica de Optometria</div>
+      <div>Clínica de Optometría</div>
     </footer>
   </body>
 </html>
