--- a/clinica/clinica_APP/templates/index.html
+++ b/clinica/clinica_APP/templates/index.html
@@ -27,10 +27,10 @@
     </header>
     <div id="inicio" class="row justify-content-center">
       <div class="col-sm-3">
-        <label form="menuRol"> Sector : </label>
+        <label form="menuRol"> Sector: </label>
         <select name="menuRol" id="menuRol">
-          <option>secretaría</option>
-          <option>Profesional medico</option>
+          <option>Secretaría</option>
+          <option>Profesional médico</option>
           <option>Ventas</option>
           <option>Taller</option>
           <option>Gerencia</option>
