--- a/clinica/app_pacientes/templates/app_pacientes/agregarPaciente.html
+++ b/clinica/app_pacientes/templates/app_pacientes/agregarPaciente.html
@@ -3,37 +3,49 @@
 {% extends "home.html" %} {% block body %}
 <!-- Button trigger modal -->
 
-<div class="row justify-content-center">
-
   <form id="formulario" class="" action="{% url 'app_pacientes:index' %}" method="post">
     {% csrf_token %}
-    <div class="container-fluid">
-      <label for="nombre">Nombre:</label>
-      <input type="text" name="nombre" placeholder="Ingrese su nombre" minlength="4" maxlength="40" required />
+
+    <div class="container w-25">
+
+      <div class="form-row">
+
+        <div class="form-group col-md-6">
+          <label for="inputNombre">Nombre</label>
+          <input type="text" class="form-control" id="inputNombre" placeholder="Nombre" required>
+        </div>
+
+        <div class="form-group col-md-6">
+          <label for="inputApellido">Apellido</label>
+          <input type="text" class="form-control" id="inputApellido" placeholder="Apellido" required>
+        </div>
+
+      </div>
+
+      <div class="form-group">
+        <label for="inputDNI">DNI</label>
+        <div class="input-group mb-2">
+          <input type="text" class="form-control" id="inputDNI" placeholder="Ejemplo: 11.222.333 (sin los puntos)" required>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="inputTelefono">Teléfono</label>
+        <input type="text" class="form-control" id="inputTelefono" placeholder="+54 11 55223344" required>
+      </div>
+
+      <div class="form-group">
+        <label class="my-1 mr-2" for="inputFecha">Fecha</label>
+        <input type="date" name="fecha" min="1900-01-01" class="form-control my-1 mr-sm-2" id="inputFecha" required>
+      </div>
+
+      <div class="form-group">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+      </div>
+
     </div>
-    <div class="container-fluid">
-      <label for="apellido">Apellido:</label>
-      <input type="text" name="apellido" placeholder="Ingrese su apellido" minlength="4" maxlength="40" required />
-    </div>
-    <div class="container-fluid">
-      <label for="dni">DNI:</label>
-      <input type="text" name="dni" placeholder="Ingrese su DNI" minlength="4" maxlength="9" required />
-    </div>
-    <div class="container-fluid">
-      <label for="telefono"> Teléfono:</label>
-      <input type="text" name="telefono" placeholder="Ingrese teléfono opcional" minlength="4" maxlength="9" />
-    </div>
-    <div class="container-fluid">
-      <label for="fecha_nac">Fecha de nacimiento:</label>
-      <input type="date" id="fecha" name="fecha_nac" min="1900-01-01" required />
-    </div>
-    <button type="submit" class="btn btn-primary">
-      Guardar
-    </button>
+
   </form>
-
-</div>
-
 
 
 <!--
