--- a/clinica/clinica_APP/templates/index.html
+++ b/clinica/clinica_APP/templates/index.html
@@ -28,8 +28,7 @@
 
 
     <div class="container w-50 d-flex justify-content-center">
-      <form class="form-inline">
-
+      <form action="" method="POST" class="form-inline">
         <div class="form-group mb-2">
           <label for="inputSector"></label>
             <select class="custom-select my-1 mr-sm-2" id="inputSector">
