--- a/clinica/clinica_APP/templates/secretaria.html
+++ b/clinica/clinica_APP/templates/secretaria.html
@@ -97,7 +97,10 @@
 
     {% block body %}
 
-    <h1>Plantilla</h1>
+    <h2> Bienvenido, {{ request.user.first_name}}</h2>
+    <h2 {{request.user.username}}></h2>
+
+    
     {% endblock%}
     <footer>
       <div>Clínica de Optometría</div>
