--- a/clinica/clinica_APP/templates/index.html
+++ b/clinica/clinica_APP/templates/index.html
@@ -1,61 +1,53 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
-    <link
-      rel="shortcut icon"
-      href="../../static/images/ojo.ico"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="../../static/images/ojo.ico" type="image/x-icon" />
     <link rel="stylesheet" href="../../static/styles/bootstrap.min.css" />
 
     <!--<link rel="stylesheet" href="{% static 'styles/estilo.css' %}" /> -->
     <link rel="stylesheet" href="../../static/styles/estilo.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="rom">
-      <h1 id="titulo" class="text-center">Bienvenido</h1>
-      <img
-        id="logo"
-        src="{% static 'images/optometrista.png'%}"
-        style="width: 55px"
-      />
+        <h1 id="titulo" class="text-center">Bienvenido</h1>
+        <img id="logo" src="{% static 'images/optometrista.png'%}" style="width: 55px" />
     </header>
     <div id="inicio" class="row justify-content-center">
-      <div class="col-sm-3">
-        <label form="menuRol"> Sector : </label>
-        <select name="menuRol" id="menuRol">
-          <option>secretaría</option>
+        <div class="col-sm-3">
+            <label form="menuRol"> Sector : </label>
+            <select name="menuRol" id="menuRol">
+          <option>Secretaría</option>
           <option>Profesional medico</option>
           <option>Ventas</option>
           <option>Taller</option>
           <option>Gerencia</option>
         </select>
-      </div>
+        </div>
 
-      <div class="col-sm-3">
-        <form action="#" target="" method="get" name="formDatosPersonales">
-          <label
-            >Contraseña:
+        <div class="col-sm-3">
+            <form action="#" target="" method="post" name="formDatosPersonales">
+                <label>Contraseña:
             <input type="password" name="password" placeholder="contraseña"
           /></label>
-        </form>
-      </div>
-      <button type="button" class="btn btn-primary">Iniciar</button>
+            </form>
+        </div>
+        <button type="button" class="btn btn-primary">Iniciar</button>
     </div>
     <footer>
-      <div>
-        Iconos diseñados por
-        <a href="https://www.flaticon.es/autores/freepik" title="Freepik"
-          >Freepik</a
+        <div>
+            Iconos diseñados por
+            <a href="https://www.flaticon.es/autores/freepik" title="Freepik">Freepik</a
         >
         from
         <a href="https://www.flaticon.es/" title="Flaticon">www.flaticon.es</a>
-      </div>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
